changed models and apis according to new database tables