@@ -1,7 +1,6 @@
 package com.campus.connect.participant.backend.repository;
-import com.campus.connect.participant.backend.model.Society;
-import com.campus.connect.participant.backend.model.User;
 
+import com.campus.connect.participant.backend.model.Society;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
@@ -10,7 +9,6 @@ import org.springframework.stereotype.Repository;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 
 @Repository
@@ -19,25 +17,30 @@ public class SocietyRepository {
     @Autowired
     private JdbcTemplate jdbcTemplate;
     
-    private final RowMapper<Society> rowMapper = new RowMapper<Society>(){
+    private final RowMapper<Society> rowMapper = new RowMapper<Society>() {
         @Override
         public Society mapRow(ResultSet rs, int rowNum) throws SQLException {
             Society society = new Society();
             society.setId(UUID.fromString(rs.getString("id")));
             society.setName(rs.getString("name"));
-            society.setImage(rs.getString("image"));
+            society.setDescription(rs.getString("description"));  // Updated
+            society.setAbout(rs.getString("about"));              // Updated
+            society.setLogo(rs.getString("logo"));                // Updated
+            society.setCover(rs.getString("cover"));              // Updated
             return society;
         }
-     };
+    };
 
-     //get all featured societies
-     public List<Society> getAllFeaturedSocieties() {
+    // Get all featured societies
+    public List<Society> getAllFeaturedSocieties() {
         String sql = "SELECT * FROM \"society\"";
         return jdbcTemplate.query(sql, rowMapper);
     }
 
-    public Society getSocietyById(UUID id){
-        String sql = "SELECT * FROM \"society\" WHERE id = ? ";
-        return jdbcTemplate.query(sql,rowMapper,id).getFirst();
+    // Get society by ID
+    public Society getSocietyById(UUID id) {
+        String sql = "SELECT * FROM \"society\" WHERE id = ?";
+        List<Society> societies = jdbcTemplate.query(sql, rowMapper, id);
+        return societies.isEmpty() ? null : societies.get(0);  // Safely return the first result, or null if not found
     }
 }
